deploy-init-container.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ic-deploy-datacenter
spec:
  selector:
    matchLabels:
      app: ic-datacenter
  replicas: 1
  template:
    metadata:
      labels:
        app: ic-datacenter
    spec:
      volumes:
  - name: ic-volume-datacenter
    emptyDir: {}
  containers:
  - name: ic-main-datacenter
    image: debian:latest
    command: ['/bin/bash', '-c', 'echo Init Done - Welcome to xFusionCorp Industries > /ic/news']
    volumeMounts:
        - name: ic-volume-datacenter
          mountPath: /ic
