env.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: envars
  namespace: default
spec:
  containers:
  - name: fieldref-container
    image: nginx:latest
    command: [ "sh", "-c"]
    args:
      - |
        'while true; do
      echo -en '/n';
                                  printenv NODE_NAME POD_NAME;
                                  printenv POD_IP POD_SERVICE_ACCOUNT;
              sleep 10;
         done;'
  restartPolicy: Never
---
