init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ic-datacenter-pod
  labels:
    app: ic-datacenter
spec:
  volumes:
  - name: ic-volume-datacenter
    emptyDir: {}
  containers:
  - name: ic-main-datacenter
    image: debian:latest
    command: ['/bin/bash', '-c', 'echo Init Done - Welcome to xFusionCorp Industries > /ic/news']
    volumeMounts:
        - name: ic-volume-datacenter
          mountPath: /ic
