secret_used_in_pod.yaml
---
kind: Pod
apiVersion: v1
metadata:
  name: secret-devops
  namespace: default
spec:
  volumes:
  - name: vol-secret
    secret:
      secretName: news
  containers:
  - name: secret-container-devops
    image: busybox
    imagePullPolicy: IfNotPresent
    command:
    - sleep
    - '3600'
    volumeMounts:
    - name: vol-secret
      mountPath: /opt/cluster
  restartPolicy: Always
