drupal_app.yaml
---
apiVersion: apps/v1 
kind: Deployment            
metadata:
  name: drupal-mysql       
  labels:                       
    app: drupal-mysql 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal-mysql
  strategy:
    type: Recreate
  template:                    
    metadata:
      labels:                  
        app: drupal-mysql
    spec:                       
      containers: 
      - image: mysql:5.7 
        name: mysql
        ports:
        - containerPort: 3306        
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage 
          mountPath: /var/lib/mysql
      volumes:                       
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: drupal-mysql-pvc
---
apiVersion: apps/v1 
kind: Deployment            
metadata:
  name: drupal     
  labels:                       
    app: drupal 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drupal
  strategy:
    type: Recreate
  template:                    
    metadata:
      labels:                  
        app: drupal
    spec:                       
      containers: 
      - image: drupal:8.6 
        name: drupal
---
apiVersion: v1                    
kind: Service                      
metadata:
  name: drupal-mysql-service         
  labels:             
    app: drupal-mysql
spec:
  type: ClusterIP
  ports:
    - targetPort: 3306
      port: 3306
  selector:    
    app: drupal-mysql
---
apiVersion: v1                    
kind: Service                      
metadata:
  name: drupal-service
  labels:             
    app: drupal
spec:
  type: NodePort
  ports:
    - targetPort: 80
      port: 80
      nodePort: 30095
  selector:    
    app: drupal
