guest-book-app.yaml
---
# deployment redis-master
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-master
spec:
  selector:
    matchLabels:
      app: redis-master
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-master
    spec:
      containers:
      - name: 
        image: 
---
# service redis-master
apiVersion: v1
kind: Service
metadata:
  name: redis-master
spec:
  type: NodePort
  selector:
    app: redis-master
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008
---
# deployment redis-slave
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-slave
spec:
  selector:
    matchLabels:
      app: redis-slave
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-slave
    spec:
      containers:
      - name: 
        image: 
---
# service redis-slave
apiVersion: v1
kind: Service
metadata:
  name: redis-slave
spec:
  type: NodePort
  selector:
    app: redis-slave
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008
---
# deployment frontend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 1
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: 
        image: 
---
# service frontend
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008
---
