mywebapp1-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mywebapp1-service
spec:
  type: NodePort
  selector:
    run: mywebapp1
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30081
