mywebapp1-v2-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mywebapp1-v2-service
spec:
  type: NodePort
  selector:
    run: mywebapp1-v2
  ports:
    - name: my-port-80
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30480
    - name: my-port-443
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30443
