persistent-volume.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-nautilus
  labels:
    app: web-nautilus
spec:
  volumes:
    - name: pv-nautilus
      persistentVolumeClaim:
        claimName: pvc-nautilus
  containers:
    - name: container-nautilus
      image: nginx:latest
      ports:
        - containerPort: 80
          name: "http-server"
      volumeMounts:
        - mountPath: "/usr/share/nginx/html"
          name: pv-nautilus
---
apiVersion: v1
kind: Service
metadata:
  name: web-nautilus
spec:
  type: NodePort
  selector:
    app: web-nautilus
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30008
