php-fpm.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: php-fpm-deployment
  namespace: default
spec:
  selector:
    matchLabels:
      app: php-fpm
  replicas: 1
  template:
    metadata:
      labels:
        app: php-fpm
    spec:
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
      - name: shared-files
        emptyDir: {}
      containers:
      - name: nginx-container
        image: nginx:latest
        volumeMounts:
        - mountPath: /var/www/html
          name: shared-files
        - mountPath: /etc/nginx
          subPath: nginx.conf
          name: nginx-config-volume
      - name: php-fpm-container
        image: php:8.1-fpm-alpine
        volumeMounts:
        - mountPath: /var/www/html
          name: shared-files
---
apiVersion: v1
kind: Service
metadata:
  name: php-fpm-service
spec:
  type: NodePort
  selector:
    app: php-fpm
  ports:
    - protocol: TCP
      port: 8094
      targetPort: 8094
      nodePort: 30012
